<resources>
    <string name="app_name">bashkirov_opisanie</string>
    <string name="strelka">TextView</string>
    <string name="vector">TODO</string>
    <string name="opisanie">Описание</string>
    <string name="save">Сохранить</string>
    <string name="clear">Очистить</string>
    <string name="backtema">TODO</string>
    <string name="vector">TODO</string>
    <string name="sohranit">Button</string>
    <string name="sohran">Сохранить</string>
    <string name="save">Сохранить</string>
    <string name="ochistit">очистить</string>
    <string name="sohr">Сохранить</string>
    <string name="ochist">Очистить</string>
    <string name="rechevoyinfolabel">Речевой информатор</string>
    <string name="chislootricatelnihlabel">Число отрицательных этажей</string>
    <string name="proverkalabelbtn">проверка звука</string>
    <string name="naliciezerolabel">Наличие 0 этажа</string>
    <string name="firstlanglabel">Первый язык сообщений</string>
    <string name="secondlanglabel">Второй язык сообщений</string>
    <string name="soundlvllabel">Общее усиление звука</string>
    <string name="seekbarbackground">TODO</string>
    <string name="soundicon">TODO</string>
</resources>